--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "symfony/console": "^4.0",
-        "timber/timber": "^1.10"                
+        "timber/timber": "^1.10"
+    },
+    "require-dev": {
+        "symfony/console": "^4.0"              
     },
     "autoload": {
         "psr-4": {
