--- a/package.json
+++ b/package.json
@@ -40,8 +40,12 @@
   },
   "dependencies": {
     "@fancyapps/fancybox": "^3.5.7",
+    "aos": "^2.3.4",
     "foundation-sites": "^6.6.1",
     "jquery": "^3.4.1",
-    "swiper": "^5.3.6"
+    "swiper": "^5.3.6",
+    "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.0.4",
+    "vuex": "^3.1.3"
   }
 }
