--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "timber/timber": "^1.10"
+        "timber/timber": "^1.10",
+        "phpmailer/phpmailer": "^6.1"
     },
     "require-dev": {
         "symfony/console": "^4.0"              
