--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,8 @@
 {
   "entry": {
     "styles": [
-      "src/scss/wp_login_styles.scss",
+      "src/scss/core/wp_login_styles.scss",
+      "src/scss/core/wp_redemptions.scss",
       "src/scss/main.scss"
     ],
     "js": [
@@ -18,7 +19,7 @@
     "php": "**/*.php",
     "twig": "**/*.twig"
   },
-  "proxy": "localhost/pandawp",
+  "proxy": "localhost/asus",
   "ignoreFoldersDevelopment": [
     "src/**/*",
     "!src/config.json",
