Revert "Update | Sesion virtual"
This reverts commit 3f3efe2ea76ba64da3fb0ad9474133447143c2f8

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         }
     ],
     "require": {
-        "timber/timber": "^1.10",
-        "phpmailer/phpmailer": "^6.1"
+        "timber/timber": "^1.10"
     },
     "require-dev": {
         "symfony/console": "^4.0"              
