--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "start": "gulp --env=development",
-    "build": "gulp build --env=production"
+    "build": "gulp build --env=production",
+    "font:install": "rm -Rf app/static/fonts/fontello/* && fontello-cli install && mv fontello-*/font/* app/static/fonts/fontello && mv fontello-*/css/fontello.css src/scss/icons/ && rm -Rf fontello-*"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -17,6 +18,7 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
+    "fontello-cli": "^0.5.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
     "gulp-cssimport": "^7.0.0",
@@ -45,7 +47,6 @@
     "jquery": "^3.4.1",
     "swiper": "^5.3.6",
     "vue": "^2.6.11",
-    "vue-awesome-swiper": "^4.0.4",
     "vuex": "^3.1.3"
   }
 }
