--- a/src/config.json
+++ b/src/config.json
@@ -18,7 +18,7 @@
     "php": "app/*.php",
     "twig": "**/*.twig"
   },
-  "proxy": "localhost/panda",
+  "proxy": "lg-vea.local",
   "ignoreFoldersDevelopment": [
     "src/**/*",
     "!src/config.json",
