Revert "Update | API: Save + Uploads"
This reverts commit 0244e25cddfe720c0218f12b5c870cd3a729a400

--- a/src/config.json
+++ b/src/config.json
@@ -18,7 +18,7 @@
     "php": "app/*.php",
     "twig": "**/*.twig"
   },
-  "proxy": "lg-vea.local",
+  "proxy": "localhost/panda",
   "ignoreFoldersDevelopment": [
     "src/**/*",
     "!src/config.json",
