--- a/src/config.json
+++ b/src/config.json
@@ -7,7 +7,8 @@
     "js": [
       "src/js/galleries.js",
       "src/js/main.js",
-      "src/js/pages/*.js"
+      "src/js/pages/*.js",
+      "src/js/core/pages/*.js"
     ]
   },
   "publicPath": "app/static",
