--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,5 @@ bundled/
 package-lock.json
 .env
 .env.php
+.fontello-session
 app/static/temp/*
-<<<<<<< HEAD
-=======
-
->>>>>>> 2ce53f4dbb1ed0e40cf7b29157577febf58b766e
