--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
-        "timber/timber": "^1.10",
-        "kint-php/kint": "^3.3",
+        "timber/timber": "1.*",
         "illuminate/database": "^7.28",
-        "phpoffice/phpspreadsheet": "^1.14"
+        "upstatement/routes": "*"
     },
     "require-dev": {
-        "symfony/console": "^5.0"              
+        "symfony/console": "^5.0",
+        "kint-php/kint": "^3.3"
     },
     "autoload": {
         "psr-4": {
