--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "stylelint-config-standard": "^19.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vinyl-named": "^1.1.0",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.41.5",
     "webpack-stream": "^5.2.1"
   },
@@ -47,6 +49,7 @@
     "jquery": "^3.4.1",
     "swiper": "^5.3.6",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.9",
     "vuex": "^3.1.3"
   }
 }
