Update | Panda WP | Lazy Loading + Bugs

--- a/src/config.json
+++ b/src/config.json
@@ -16,6 +16,7 @@
     ]
   },
   "publicPath": "app/static",
+  "theme": "panda-wp",
   "globalResources": {
     "styles": "src/scss/**/*.scss",
     "js": "src/js/**/*.js",
