--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "foundation-sites": "^6.6.1",
     "jquery": "^3.4.1",
     "swiper": "^5.3.6",
+    "v-lazy-image": "^1.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.1.3"
