--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "timber/timber": "1.*",
         "illuminate/database": "^7.28",
-        "upstatement/routes": "*"
+        "upstatement/routes": "*",
+        "phpmailer/phpmailer": "6.1",
+        "vlucas/phpdotenv": "^5.3"
     },
     "require-dev": {
         "symfony/console": "^5.0",
