--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "v-lazy-image": "^1.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
+    "vue-router-prefetch": "^1.6.3",
     "vuex": "^3.1.3"
   }
 }
