--- a/resources/vue/.env.example
+++ b/resources/vue/.env.example
@@ -1,3 +1,6 @@
+NODE_ENV=development
+
+VUE_APP_MODE='development'
 VUE_APP_SITE='http://pandawp.site'
 VUE_APP_HOST='pandawp.site'
 VUE_APP_API='http://pandawp.site/wp-json/custom/v1'
