--- a/resources/vue/.env.production
+++ b/resources/vue/.env.production
@@ -1,5 +1,6 @@
 NODE_ENV=production
 
+VUE_APP_MODE='production'
 VUE_APP_SITE='http://pandawp.site'
 VUE_APP_HOST='pandawp.site'
 VUE_APP_API='http://pandawp.site/wp-json/custom/v1'
