--- a/resources/vue/package.json
+++ b/resources/vue/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@iconify/vue2": "^1.1.2",
+    "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
