--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue:stage": "npm --prefix ./resources/vue/ run stage",
     "vue:build": "npm --prefix ./resources/vue/ run build",
     "admin:serve": "npm --prefix ./resources/admin/ run start",
-    "admin:build": "npm --prefix ./resources/admin/ run build"
+    "admin:build": "npm --prefix ./resources/admin/ run build",
+    "admin:stage": "npm --prefix ./resources/admin/ run stage"
   }
 }
