--- a/.editorconfig
+++ b/.editorconfig
@@ -17,9 +17,8 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 100
 
-
 # 4 space indentation
-[{*.php, *.stub, pandora}]
+[{*.php, *.stub, panda}]
 indent_size = 4
 
 [composer.json]
