--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "admin:serve": "npm --prefix ./resources/admin/ run start",
     "admin:build": "npm --prefix ./resources/admin/ run build",
     "admin:stage": "npm --prefix ./resources/admin/ run stage"
+  },
+  "devDependencies": {
+    "postcss-scss": "^4.0.3"
   }
 }
