--- a/resources/vue/package.json
+++ b/resources/vue/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@iconify/vue2": "^1.1.2",
     "@popperjs/core": "^2.11.2",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "swiper": "^8.0.6",
     "v-lazy-image": "^2.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -31,7 +33,12 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss-scss": "^4.0.3",
     "sass-loader": "^8.0.2",
+    "stylelint": "^14.5.1",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-scss": "^4.1.0",
+    "stylelint-webpack-plugin": "^1.2.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
