--- a/resources/vue/package.json
+++ b/resources/vue/package.json
@@ -18,6 +18,7 @@
     "v-lazy-image": "^2.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
