--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue:build": "npm --prefix ./resources/vue/ run build",
     "admin:serve": "npm --prefix ./resources/admin/ run start",
     "admin:build": "npm --prefix ./resources/admin/ run build",
-    "admin:stage": "npm --prefix ./resources/admin/ run stage"
+    "admin:stage": "npm --prefix ./resources/admin/ run stage",
+    "build": "npm --prefix ./resources/admin/ run build && npm --prefix ./resources/admin/ run build"
   }
 }
