--- a/resources/vue/.env.example
+++ b/resources/vue/.env.example
@@ -4,4 +4,6 @@ VUE_APP_MODE='development'
 VUE_APP_SITE='http://pandawp.site'
 VUE_APP_HOST='pandawp.site'
 VUE_APP_API='http://pandawp.site/wp-json/custom/v1'
+
 VUE_APP_THEME='pandawp'
+VUE_APP_TITLE='Panda WP'
