Update | panda command with installer

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,10 @@
         "psr-4": {
             "PandaWP\\Console\\": "commands/"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
+        }
     }
 }
