--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "vue:serve": "npm --prefix ./resources/vue/ run dev",
     "vue:stage": "npm --prefix ./resources/vue/ run stage",
     "vue:build": "npm --prefix ./resources/vue/ run build",
-    "admin:serve": "npm --prefix ./resources/admin/ run start",
+    "admin:serve": "npm --prefix ./resources/admin/ run dev",
     "admin:build": "npm --prefix ./resources/admin/ run build",
     "admin:stage": "npm --prefix ./resources/admin/ run stage",
     "build": "npm --prefix ./resources/admin/ run build && npm --prefix ./resources/vue/ run build"
