--- a/resources/admin/.env.example
+++ b/resources/admin/.env.example
@@ -1,4 +1,5 @@
 VITE_APP_MODE='development'
+VITE_APP_LIVE_SCRIPT='example' #development mode only
 
 VITE_APP_THEME='pandawp'
 VITE_APP_API='http://pandawp.site/wp-json/custom/v1'
