--- a/resources/vue/package.json
+++ b/resources/vue/package.json
@@ -25,6 +25,8 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.30.1",
+    "sal.js": "^0.8.5",
+    "swiper": "^11.0.5",
     "vee-validate": "^4.11.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
