--- a/resources/admin/.env.example
+++ b/resources/admin/.env.example
@@ -1,5 +1,6 @@
 VITE_APP_MODE='development'
-VITE_APP_LIVE_SCRIPT='example' #development mode only
+# Used for set a view as main view in development server
+VITE_APP_LIVE_VIEW='example'
 
 VITE_APP_THEME='pandawp'
 VITE_APP_API='http://pandawp.site/wp-json/custom/v1'
