--- a/resources/admin/.stylelintrc.json
+++ b/resources/admin/.stylelintrc.json
@@ -7,6 +7,7 @@
   "rules": {
     "no-empty-source": null,
     "no-descending-specificity": null,
+    "no-invalid-position-declaration": null,
     "scss/at-rule-no-unknown": [
       true,
       {
