--- a/resources/admin/package.json
+++ b/resources/admin/package.json
@@ -1,68 +1,45 @@
 {
-  "name": "vite-project",
-  "version": "0.0.0",
+  "name": "vue2",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "stage": "run-p type-check build-only-staging",
-    "build": "run-p type-check build-only-production",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "build-only-staging": "vite build --mode staging",
-    "build-only-production": "vite build --mode production",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "stage": "vue-tsc -b && vite build --mode staging",
+    "build": "vue-tsc -b && vite build --mode production",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@vee-validate/yup": "^4.11.6",
-    "@vue/compat": "^3.3.4",
-    "bootstrap": "^5.3.0",
-    "bootstrap-vue": "^2.23.1",
-    "pinia": "^2.1.4",
-    "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.30.1",
-    "vee-validate": "^4.11.6",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "@iconify/vue": "^5.0.0",
+    "@primeuix/themes": "^1.2.3",
+    "@vee-validate/yup": "^4.15.1",
+    "pinia": "^3.0.3",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.7",
+    "v-lazy-image": "^2.1.1",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@iconify/vue": "^4.1.1",
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@tsconfig/node18": "^2.0.1",
-    "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.16.17",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/compiler-sfc": "^3.3.4",
-    "@vue/eslint-config-prettier": "^7.1.0",
+    "@types/node": "^24.3.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.3.2",
-    "@vue/tsconfig": "^0.4.0",
-    "cypress": "^12.14.0",
-    "eslint": "^8.39.0",
-    "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-vue": "^9.11.0",
-    "jsdom": "^22.1.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-html": "^1.5.0",
-    "postcss-lit": "^1.1.0",
-    "postcss-scss": "^4.0.8",
-    "prettier": "^2.8.8",
-    "sass": "^1.63.6",
-    "start-server-and-test": "^2.0.0",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-config-standard-scss": "^11.0.0",
-    "stylelint-scss": "^5.2.1",
-    "typescript": "~5.0.4",
-    "v-lazy-image": "^2.1.1",
-    "vite": "^4.3.9",
-    "vite-plugin-checker": "^0.6.2",
-    "vite-plugin-stylelint": "^5.1.1",
-    "vitest": "^0.32.0",
-    "vue-tsc": "^1.6.5"
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^9.33.0",
+    "prettier": "3.6.2",
+    "sass-embedded": "^1.90.0",
+    "stylelint": "^16.23.1",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-config-standard-scss": "^15.0.1",
+    "typescript": "~5.8.3",
+    "vite": "^7.1.2",
+    "vite-plugin-checker": "^0.10.3",
+    "vite-plugin-stylelint": "^6.0.2",
+    "vue-tsc": "^3.0.5"
   }
 }
